test/official_tests/super/no_superclass_method.lox
class Base {}

class Derived < Base {
  foo() {
    super.doesNotExist(1); // error: {"line":5,"message":"Undefined property 'super' for class 'Base'","type":"RuntimeError"}
  }
}

Derived().foo();
